crates/aerro/tests/ui/fail/missing_code.stderr
error: missing `code = Business::NotFound` (two-segment path: Category::GrpcCode)
 --> tests/ui/fail/missing_code.rs:5:5
  |
5 | /     #[aerro(exposure = Internal)]
6 | |     NoCode,
  | |__________^
